# Design2Make_R00763

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  STATUS.md  check_material.py  code_book.json  create_pipeline.py  dumpcodebook.py  env.example  expand_11070.json  expand_material.py  extract.py  genesis_laptop.csv  knowledge.md  knowledge.py  learning.py  main.py  policies.json  policies.md  pyproject.toml  rule_engine_glue.py  rules.md  run.bat  run.sh  test_add_supply.py  test_agent.py  test_change_view.py  test_deepinsert_create.py  test_discipline.py  test_make.py  test_payload.py  test_pipeline.py  test_router.py  test_sap.py  test_search.py  test_trace.py  test_update.py  validate_pipeline.py  verdict.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: kg.html
frontend/src/: App.jsx  styles.css
graph_store/: ontology.json
logs/: session_16241283.jsonl
mcp_remote/: call_tool.py  rfc_client.py  rfc_demand_mrp.py  rfc_mrp.py  rfc_prod_vers.py  rfc_smoke.py  sap_planning_mcp.py  sap_prodvers_mcp.py
mcp_server/: assurance.py  discipline.py  genesis.py  graph.py  make.py  plant_country.json  sap.py  serper.py  vector.py  work_centers.json
skills/d2m-render/: SKILL.md  mrp_result_view.html
static/: d2m_render.js  index.html
static_v2/: index.html
static_v2/assets/: index-B_M96kns.js  index-Ck_qFiLd.css  index-D02a1BLA.css  index-D6Me0pmW.css  index-Dgyq5FQc.js  index-ySuNDgi8.js
